# ottyel

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: install.sh
src/: app.rs  commands.rs  config.rs  domain.rs  ingest.rs  lib.rs  main.rs  mcp.rs  preferences.rs  query.rs  store.rs  ui.rs
src/app/: input.rs  mod.rs
src/mcp/: common.rs  mod.rs  protocol.rs  resources.rs  tests.rs  tools.rs
src/store/: helpers.rs  ingest.rs  mod.rs  queries.rs  schema.rs  tests.rs
src/ui/: chrome.rs  details.rs  geometry.rs  mod.rs  overview.rs  panes.rs  state.rs  tests.rs  traces.rs
